-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.10.0 FF
-
None
Example:
FAIL! : tst_QWebSocket::tst_ping() Compared values are not the same
Actual (urlConnected): ws://127.0.0.1:49596/segment/with%20spaces?queryitem=with%20encoded%20characters
Expected (url) : ws://127.0.0.1:49596/segment/with%20spaces?queryitem=with%20encoded%20characters
Tested on macOS.
- is duplicated by
-
QTBUG-136025 FAIL! : tst_QWebSocket::tst_sendTextMessage() Compared values are not the same
-
- Closed
-